--- a/src/app/modules/home/main-board/main-board.component.scss
+++ b/src/app/modules/home/main-board/main-board.component.scss
@@ -12,6 +12,7 @@
     justify-content: space-between;
     > div {
         width: 24%;
+        cursor: pointer;
     }
 }
 
@@ -68,3 +69,4 @@
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
