--- a/src/app/modules/private/user-board/user-board.component.html
+++ b/src/app/modules/private/user-board/user-board.component.html
@@ -32,7 +32,7 @@
           <div class="cell">
             <mat-form-field class="form-field" appearance="outline">
               <mat-label>First Name</mat-label>
-              <input matInput [(ngModel)]="user.name" [ngModelOptions]="{standalone: true}" required>
+              <input matInput [(ngModel)]="user.Name" [ngModelOptions]="{standalone: true}" required>
               <mat-error>
                 First Name is required
               </mat-error>
@@ -41,7 +41,7 @@
           <div class="cell">
             <mat-form-field class="form-field" appearance="outline">
               <mat-label>Last Name</mat-label>
-              <input matInput [(ngModel)]="user.surname" [ngModelOptions]="{standalone: true}" required>
+              <input matInput [(ngModel)]="user.Surname" [ngModelOptions]="{standalone: true}" required>
               <mat-error>
                 Last Name is required
               </mat-error>
@@ -53,13 +53,13 @@
           <div class="cell">
             <mat-form-field class="form-field" appearance="outline">
               <mat-label>City</mat-label>
-              <input matInput [(ngModel)]="user.city" [ngModelOptions]="{standalone: true}" required>
+              <input matInput [(ngModel)]="user.City" [ngModelOptions]="{standalone: true}" required>
             </mat-form-field>
           </div>
           <div class="cell">
             <mat-form-field class="form-field" appearance="outline">
               <mat-label>Country</mat-label>
-              <input matInput [(ngModel)]="user.country" [ngModelOptions]="{standalone: true}" required>
+              <input matInput [(ngModel)]="user.Country" [ngModelOptions]="{standalone: true}" required>
             </mat-form-field>
           </div>
         </div>
@@ -67,13 +67,13 @@
           <div class="cell width-50_2">
             <mat-form-field class="form-field width-100" appearance="outline">
               <mat-label>Address</mat-label>
-              <input matInput [(ngModel)]="user.address" [ngModelOptions]="{standalone: true}">
+              <input matInput [(ngModel)]="user.Address" [ngModelOptions]="{standalone: true}">
             </mat-form-field>
           </div>
           <div class="cell">
             <mat-form-field class="form-field" appearance="outline">
               <mat-label>Tax Number</mat-label>
-              <input matInput [(ngModel)]="user.taxNumber" [ngModelOptions]="{standalone: true}" required>
+              <input matInput [(ngModel)]="user.TaxNumber" [ngModelOptions]="{standalone: true}" required>
               <mat-error>
                 Last Name is required
               </mat-error>
