--- a/src/app/shared/component/property-frame/property-frame.component.html
+++ b/src/app/shared/component/property-frame/property-frame.component.html
@@ -6,10 +6,10 @@
     </div>
 
     <div class="card-container-content">
-      <div class="charachteristics">123 m2 | 4 bedrooms | 4 bathrooms</div>
+      <div class="charachteristics">{{property.NetAream2}} m2 | {{property.Typology}} bedrooms | {{property.NumberOfBathrooms}} bathrooms</div>
       <div class="address-price-row">
-        <div class="address">Vila Nova de Famalicão, Braga</div>
-        <div class="price">123.000$</div>
+        <div class="address">{{property.City}}, {{property.Country}}</div>
+        <div class="price">{{property.Price}} $</div>
       </div>
     </div>
 
