--- a/src/app/modules/private/my-listings/my-listings.component.html
+++ b/src/app/modules/private/my-listings/my-listings.component.html
@@ -12,18 +12,18 @@
                 <div class="card-image">
                     <img [src]="image" width="100%" height="100%">
                 </div>
-                <div> {{property.price}}</div>
+                <div> {{property.Price}}</div>
                 <div class="full-width space-between">
                     <div class="button-margin full-width">
                         <button class="full-width" mat-raised-button color="primary"
-                            (click)="edit(property.id)"> Edit </button>
+                            (click)="edit(property.Id)"> Edit </button>
                     </div>
                     <div class="button-margin full-width">
                         <button class="full-width" mat-raised-button color="primary"> Deactivate </button>
                     </div>
                     <div class="button-margin full-width">
                         <button class="full-width" mat-raised-button color="accent"
-                            (click)="delete(property.id, i)"> Delete </button>
+                            (click)="delete(property.Id, i)"> Delete </button>
                     </div>
                 </div>
             </div>
