--- a/src/app/modules/property-page/property-detail/property-detail.component.html
+++ b/src/app/modules/property-page/property-detail/property-detail.component.html
@@ -1,93 +1,62 @@
 <div class="row">
-  <div class="width-15"></div>
-  <div class="width-75">
+  <div class="width-100">
     <div class="row">
-      <div class="width-70">
-        <div class="column background-filter">
-          <!--ROW 1 HEADER-->
-          <div class="row">
-            <div class="image">
-              <img [src]="image" width="160" height="160">
-            </div>
-            <div class="column header-box">
-              <div class="row">
-                <div class="first-name">{{user.name}}</div>
-                <div class="last-name">{{user.surname}}</div>
-              </div>
-              <div class="job-position">.NET Developer</div>
-              <div class="location">{{user.city}}, {{user.country}}</div>
-            </div>
-          </div>
-          <!--ROW 2 HEADLINE-->
-          <div class="row">
-            <div clas="column">
-              <div class="section-title">Address</div>
-              <div class="headline-body">{{user.address}}</div>
-            </div>
-          </div>
-          <!--ROW 3 JOBS-->
-          <div class="row">
-            <div class="column width-100">
-              <mat-divider class="divider"></mat-divider>
-              <div class="section-title">Professional experience</div>
 
+      <div class="column background-filter width-75">
+        <div class="row">
+          <!--Images-->
+          <div class="column width-60">
+            <!--1x Main photo-->
+            <div class="card-image">
+              <img [src]="image" width="100%" height="100%">
+            </div>
+
+            <!--2x-->
+            <div class="row">
+              <div class="width-50">
+                <img [src]="image" width="100%" height="100%">
+              </div>
+              <div class="width-50">
+                <img [src]="image" width="100%" height="100%">
+              </div>
+            </div>
+            <div class="row">
+              <div class="width-50">
+                <img [src]="image" width="100%" height="100%">
+              </div>
+              <div class="width-50">
+                <img [src]="image" width="100%" height="100%">
+              </div>
             </div>
           </div>
-          <!--ROW 4 EDUCATIONS-->
-          <div class="row">
-            <div class="column width-100">
-              <mat-divider class="divider"></mat-divider>
-              <div class="section-title">Education</div>
-           
+          <!--Property description-->
+          <div class="column width-35">
+            <!--Price-->
+            <div class="price">{{property.Price}} €</div>
+            <!--Address-->
+            <div class="address">{{property.City}}, {{property.Country}}</div>
+            <!--Characteristics-->
+            <div class="row">
+              <!--Square meters-->
+              <div class="meters">75m</div>
+              <!--Typology-->
+              <div class="typology">T2</div>
+              <!--Bathrooms-->
+              <div class="bathrooms">2</div>
             </div>
-          </div>
-          <!--ROW 5 SKILLS-->
-          <div class="row">
-            <div class="column width-100">
-              <mat-divider class="divider"></mat-divider>
-              <div class="section-title">Skills</div>
-         <!--      <div *ngFor="let technology of user.technologies">
-                <div class="row bordered skill">
-                  <div>{{technology.name}}</div>
-                  <div>{{technology.years}} Years</div>
-                  <div>
-                    <mat-radio-group>
-                      <mat-radio-button class="level-1" value="1"></mat-radio-button>
-                      <mat-radio-button class="level-2" value="2"></mat-radio-button>
-                      <mat-radio-button class="level-3" value="3"></mat-radio-button>
-                      <mat-radio-button class="level-4" value="4"></mat-radio-button>
-                      <mat-radio-button class="level-5" value="5"></mat-radio-button>
-                    </mat-radio-group>
-                  </div>
-                </div>
-              </div> -->
-            </div>
-          </div>
-          <!--ROW 6 LANGUAGES-->
-          <div class="row">
-            <div class="column width-100">
-              <mat-divider class="divider"></mat-divider>
-              <div class="section-title">Languages</div>
-      <!--         <div *ngFor="let language of user.languages">
-                <div class="row bordered language">
-                  <div>{{language.name}}</div>
-                  <div>{{language.level}}</div>
-                  <div></div>
-                </div>
-              </div> -->
+            <!--Description-->
+            <div class="description">
+              {{property.Description}}
             </div>
           </div>
         </div>
       </div>
-      <!--LIST-->
-      <div class="width-30">
-        <div class="similiar-developers">Similiar developers</div>
-        <div class="devlist column">
-          <div *ngFor="let user of users" class="card">
-            <app-property-frame [user]="user"></app-property-frame>
-          </div>
-        </div>
+      <div class="column background-filter width-20">
+        Lisbon, Cascais 250.000
       </div>
     </div>
   </div>
+
+
+
 </div>
