--- a/src/app/shared/component/navbar/navbar.component.scss
+++ b/src/app/shared/component/navbar/navbar.component.scss
@@ -1,11 +1,12 @@
 .navbar {
-    background: linear-gradient(to right, rgb(28, 76, 197), #ff4081);
-    height: 80px;
+    // background: linear-gradient(to right, rgb(28, 76, 197), #ff4081);
+    background: black;
+    height: 60px;
 }
 
 .high-tech-navbar {
-    // background-color: rgb(34, 82, 199);
-    background: linear-gradient(to right, rgb(28, 76, 197), #ff4081);
+    // background: linear-gradient(to right, rgb(28, 76, 197), #ff4081);
+    background: black;
 }
 .navbar-brand,
 .nav-link,
