multiple maps points on map

--- a/src/app/modules/home/search-board/search-board.component.html
+++ b/src/app/modules/home/search-board/search-board.component.html
@@ -12,7 +12,7 @@
     </div>
     <div class="width-50_2">
         <div class="row width-80 height-map">
-            <app-map [mapPointInput]="mapPoint"></app-map>
+            <app-map-search [mapPointInputList]="mapPoints"></app-map-search>
         </div>
     </div>
 </div>
