--- a/src/app/shared/component/filter/filter-search/filter-search.component.html
+++ b/src/app/shared/component/filter/filter-search/filter-search.component.html
@@ -2,7 +2,7 @@
 
     <div class="border-margins width-75">
       <mat-form-field class="full-width" appearance="outline">
-        <input matInput placeholder="Location">
+        <input matInput placeholder="Location" [ngModel]="location">
       </mat-form-field>
     </div>
     <div class="border-margins width-25">
