--- a/src/app/modules/home/main-board/main-board.component.html
+++ b/src/app/modules/home/main-board/main-board.component.html
@@ -52,7 +52,7 @@
         <div class="title">Buy </div>
         <div class="text-content">Find your dream home among our list of houses</div>
         <div class="center-button">
-          <button mat-raised-button class="search" (click)="search()"> Buy your dream house</button>
+          <button mat-raised-button class="search"> Buy your dream house</button>
         </div>
       </mat-card>
     </div>
@@ -66,7 +66,7 @@
         <div class="title">Sell</div>
         <div class="text-content">Find the best seller for your home</div>
         <div class="center-button">
-          <button mat-raised-button class="search" (click)="search()"> Sell at the best price</button>
+          <button mat-raised-button class="search"> Sell at the best price</button>
         </div>
       </mat-card>
     </div>
@@ -80,7 +80,7 @@
         <div class="title">Rent</div>
         <div class="text-content">Explore our best options in the market</div>
         <div class="center-button">
-          <button mat-raised-button class="search" (click)="search()"> Find a room </button>
+          <button mat-raised-button class="search"> Find a room </button>
         </div>
       </mat-card>
     </div>
