--- a/src/app/modules/property-page/property-detail/property-detail.component.scss
+++ b/src/app/modules/property-page/property-detail/property-detail.component.scss
@@ -2,6 +2,10 @@
     height: 70%;
 }
 
+.details {
+    padding: 10px;
+}
+
 .price {
     color: blue;
     font-weight: bold;
@@ -20,6 +24,32 @@
 
 .description {
     color: rgb(88, 88, 88);
+}
+
+app-property-frame {
+    cursor: pointer;
+}
+::ng-deep #map {
+width: unset !important;
+}
+
+.map-div {
+    width: 100%;
+}
+
+// Material Override PLACE TO STYLES
+
+::ng-deep .mat-form-field-flex > .mat-form-field-infix {
+    padding: 0.4em 0px !important;
+}
+::ng-deep .mat-form-field-label-wrapper {
+    top: -1.5em;
+}
+
+::ng-deep .mat-form-field-appearance-outline.mat-form-field-can-float.mat-form-field-should-float
+    .mat-form-field-label {
+    transform: translateY(-1.1em) scale(0.75);
+    width: 133.33333%;
 }
 
 
