--- a/src/app/shared/component/filter/filter-container/filter-container.component.html
+++ b/src/app/shared/component/filter/filter-container/filter-container.component.html
@@ -1,4 +1,9 @@
 <div class="column background">
+    <div class=center-filter>
+        <div class="column">
+            <!-- <div class="welcome">Find your dream house</div> -->
+        </div>
+    </div>
     <div class="center-filter">
         <div class="column background-filter black-background"
             [ngClass]="[isMobile ? 'full-width' : 'threefourth-width']">
