--- a/src/app/shared/component/navbar/navbar.component.html
+++ b/src/app/shared/component/navbar/navbar.component.html
@@ -1,46 +1,47 @@
 <!--DESKTOP NAVIGATION-->
 <div *ngIf="!isMobile">
   <nav class="navbar navbar-expand-lg">
-    <a class="navbar-brand" href="#"><h3>ImoRentals</h3></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse flex" id="navbarSupportedContent">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">About Us<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Buy<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Sell<span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Rent<span class="sr-only">(current)</span></a>
-        </li>
-      </ul>
-      <ul class="navbar-nav margin-left">
-        <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/add-listing']">Add listing</a>
-        </li>
-        <li class="nav-item register" *ngIf="!authenticated">
-          <a class="nav-link" [routerLink]="['/register']">Register</a>
-        </li>
-        <li class="nav-item login" *ngIf="!authenticated">
-          <a class="nav-link" [routerLink]="['/login']">Login</a>
-        </li>
+    <div class="container">
+      <a class="navbar-brand" href="#">
+        <h3>ImoRentals</h3>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse flex" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Buy<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Sell<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Rent<span class="sr-only">(current)</span></a>
+          </li>
+        </ul>
+        <ul class="navbar-nav margin-left ">
+          <li class="nav-item add-listing">
+            <a class="nav-link" [routerLink]="['/add-listing']">Add listing</a>
+          </li>
+          <li class="nav-item register" *ngIf="!authenticated">
+            <a class="nav-link" [routerLink]="['/register']">Register</a>
+          </li>
+          <li class="nav-item login" *ngIf="!authenticated">
+            <a class="nav-link" [routerLink]="['/login']">Login</a>
+          </li>
 
-        <div class="profile" *ngIf="authenticated">
-          <button class="logged-user" mat-button [matMenuTriggerFor]="menu">Brad</button>
-          <mat-menu #menu="matMenu">
-            <button mat-menu-item [routerLink]="['/userboard']">Profile</button>
-            <button mat-menu-item>Messages</button>
-            <button mat-menu-item (click)="logout()">Logout</button>
-          </mat-menu>
-        </div>
-      </ul>
+          <div class="profile" *ngIf="authenticated">
+            <button class="logged-user" mat-button [matMenuTriggerFor]="menu">Brad</button>
+            <mat-menu #menu="matMenu">
+              <button mat-menu-item [routerLink]="['/userboard']">Profile</button>
+              <button mat-menu-item>Messages</button>
+              <button mat-menu-item (click)="logout()">Logout</button>
+            </mat-menu>
+          </div>
+        </ul>
+      </div>
     </div>
   </nav>
   <ng-container *ngTemplateOutlet="template"></ng-container>
